--- a/src/Sitecore.Support.138194/App_Config/Include/zzz/Sitecore.Support.138194.config
+++ b/src/Sitecore.Support.138194/App_Config/Include/zzz/Sitecore.Support.138194.config
@@ -1,7 +1,8 @@
 <configuration xmlns:patch="http://www.sitecore.net/xmlconfig/" xmlns:set="http://www.sitecore.net/xmlconfig/set/">
   <sitecore>
-
-    <clientDataStore set:type="Sitecore.Support.Data.SqlServer.SqlServerClientDataStore, Sitecore.Support.138194" type="Sitecore.Data.$(database).$(database)ClientDataStore, Sitecore.Kernel"/>
-
+    <clientDataStore type="Sitecore.Support.Data.SqlServer.SqlServerClientDataStore, Sitecore.Support.138194" patch:instead="*[@type='Sitecore.Data.$(database).$(database)ClientDataStore, Sitecore.Kernel']">
+      <param connectionStringName="core" />
+      <param desc="object lifetime">00:20:00</param>
+    </clientDataStore>
   </sitecore>
 </configuration>
